--- a/RocketTurretFan3/RocketTurretFan3.html
+++ b/RocketTurretFan3/RocketTurretFan3.html
@@ -62,7 +62,7 @@
 			</a>
 		</div>
 		<div class="tooltip">
-			<img src="img/.png" style="width:300px;height:200px;">
+			<img src="img/unnamed.png" style="width:300px;height:200px;">
 			<span class="tooltiptext"> </span>
 			</a>
 		</div>
