--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			body {
 			background-image: url(bgimg.png);
 			background-color: #000000;
+			font-family: Consolas;
 			}
 		</style>
 	</head>
