--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 			font-family: Consolas;
 			}
 		</style>
+		<style>
+			::selection {
+			background: #007d00;
+			color: #fff;
+			}
+		</style>
 	</head>
 	<body>
 		<center>
