--- a/Maps/Maps.html
+++ b/Maps/Maps.html
@@ -11,6 +11,12 @@
 			}
 		</style>
 		<style>
+			::selection {
+			background: #007d00;
+			color: #fff;
+			}
+		</style>
+		<style>
 			.tooltip {
 				position: relative;
 				display: inline-block;
