--- a/Maps/Maps.html
+++ b/Maps/Maps.html
@@ -7,7 +7,7 @@
 		<style>
 			body {
 			background-color: #000000;
-			font-family: Consolas;
+			font-family: NSimSun;
 			}
 		</style>
 		<style>
