--- a/PortalVideos2012/PortalVideos2012.html
+++ b/PortalVideos2012/PortalVideos2012.html
@@ -7,7 +7,7 @@
 		<style>
 			body {
 			background-color: #000000;
-			font-family: Consolas;
+			font-family: NSimSun;
 			}
 		</style>
 		<style>
