--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			body {
 			background-image: url(bgimg.png);
 			background-color: #000000;
-			font-family: Consolas;
+			font-family: NSimSun;
 			}
 		</style>
 		<style>
